# emeraldv2

./: .gitignore  Cargo.toml  example.env
emeraldV2/: Cargo.toml
migrations/: 20220307073624_greeting.sql  20220308090606_greetings.sql
src/: db.rs  greeting_handler.rs  main.rs  structures.rs  subcommands.rs
