[package]
name = "emeraldV2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid"] }
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
dotenv = "0.15.0"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop", features = ["collector"] }
